Add managed transaction corrections
